# agent-stash

./: .gitignore  Cargo.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
crates/stash-cli/: Cargo.toml
crates/stash-client/: Cargo.toml
crates/stash-core/: Cargo.toml  README.md
crates/stash-core/src/: audit.rs  auth.rs  blob.rs  config.rs  db.rs  lib.rs  repo.rs  search.rs
crates/stash-core/src/auth/: bootstrap.rs  mod.rs  rate.rs  token.rs
crates/stash-core/src/blob/: gc.rs  mod.rs  routing.rs  store.rs  stub.rs
crates/stash-core/src/db/: migrations.rs  mod.rs
crates/stash-core/src/repo/: delete.rs  diff.rs  git.rs  history.rs  list.rs  mod.rs  read.rs  write.rs
crates/stash-mcp/: Cargo.toml
crates/stash-server/: Cargo.toml
crates/stash-server/src/: claude_dir.rs  main.rs  mcp_proxy.rs
crates/stash-types/: Cargo.toml  README.md
crates/stash-types/src/: diff.rs  error.rs  file_version.rs  identity.rs  lib.rs  page.rs  path.rs  search.rs  sha.rs  tier.rs  token.rs
crates/stash-web/: README.md
docs/: spec.md  spec2.md
reference/: Agent Stash.html  stash-app.jsx  stash-artifact-page.jsx  stash-bazaar.jsx  stash-browser.jsx  stash-cli.jsx  stash-cmdk.jsx  stash-detail.jsx  stash-local.jsx  stash-marketplace-pages.jsx  stash-mcp-registry.jsx  stash-theme.jsx
