# Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/stash-types",
    "crates/stash-core",
    "crates/stash-mcp",
    "crates/stash-client",
    "crates/stash-cli",
    "crates/stash-server",
]

[workspace.package]
edition      = "2021"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/jmagar/agent-stash"

[workspace.dependencies]
# Core runtime
tokio       = { version = "1.38", features = ["full"] }
bytes       = "1.6"
chrono      = { version = "0.4", features = ["serde"] }

# Serde
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Errors
thiserror   = "1"
anyhow      = "1"

# Git + glob
git2        = { version = "0.19", default-features = false }
glob        = "0.3"

# Database
rusqlite    = { version = "0.31", features = ["bundled"] }

# Hashing
sha2        = "0.10"
hex         = "0.4"

# Observability
tracing     = "0.1"

# Tests
tempfile    = "3"
rstest      = "0.21"
assert_matches = "1.5"
