[package]
name         = "stash-core"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
stash-types = { path = "../stash-types" }
argon2      = { workspace = true }
base32      = { workspace = true }
tokio       = { workspace = true }
bytes       = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
git2        = { workspace = true }
glob        = { workspace = true }
rand        = { workspace = true }
regex       = "1"
rusqlite    = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }
zeroize     = { workspace = true }

[dev-dependencies]
tempfile       = { workspace = true }
rstest         = { workspace = true }
assert_matches = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["macros", "rt-multi-thread"] }
