[package]
name         = "stash-server"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "agent-stash"
path = "src/main.rs"

[dependencies]
stash-types  = { path = "../stash-types" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
axum         = "0.7"
tower-http   = { version = "0.5", features = ["cors", "fs"] }
walkdir      = "2"
reqwest      = { version = "0.12", features = ["json"] }
