[package]
name         = "stash-types"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
serde    = { workspace = true }
thiserror = { workspace = true }
chrono   = { workspace = true }
bytes    = { workspace = true }
